<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 The Winston Authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>

    <string name="app_name">Winston</string>
    <string name="status_unknown">…</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_voice_command">Voice command</string>


    <string name="speak_now">Speak now …</string>
    <string name="no_server_pref">Please set the "server" in settings.</string>
    <string name="no_auth_token_pref">Please set the "authentication token" in settings.</string>

    <string name="tile_refreshing">Refreshing …</string>
    <string name="tile_refreshing_failed">Refresh failed</string>
    <string name="tile_refreshing_success">Refresh success</string>
    <string name="tile_action_failed">Action failed</string>

    <!-- Preferences -->
    <string name="preference_activity_title">Winston settings</string>
    <string name="pref_category_general">General</string>
    <string name="pref_server_title">Server address</string>
    <string name="pref_server_description">The address of the server, without protocol but
        with port e.g. \'my.server.com:1234\'</string>
    <string name="pref_auth_token_title">Authentication token</string>
    <string name="pref_auth_token_description">The authentication token that grants this
        app access to the Winston server</string>

</resources>
