<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 The Winston Authors
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_general">
        <EditTextPreference
            android:key="pref_key_server"
            android:summary="@string/pref_server_description"
            android:title="@string/pref_server_title"/>
        <EditTextPreference
            android:key="pref_key_auth_token"
            android:summary="@string/pref_auth_token_description"
            android:title="@string/pref_auth_token_title"/>
    </PreferenceCategory>
</PreferenceScreen>